<resources>
    <string name="app_name">inIT</string>


    <!-- Util -->
    <string name="bottom_sheet_default_org_type">기업형태</string>
    <string name="bottom_sheet_default_done">완료</string>

    <!-- Main -->

    <!-- Sign -->
    <string name="sign_in">로그인</string>
    <string name="sign_in_title">IT 커뮤니티 중개 사이트</string>
    <string name="sign_in_id_hint">아이디를 입력해주세요</string>
    <string name="sign_in_pw_hint">비밀번호를 입력해주세요</string>
    <string name="sign_in_check_org">기업회원입니다</string>
    <string name="sign_in_find_id">아이디 찾기</string>
    <string name="sign_in_find_pw">비밀번호 찾기</string>
    <string name="sign_in_sign_up">회원가입</string>

    <string name="sign_up">회원가입</string>

    <string name="sign_up_step_one_info">일반회원과 기업회원 중\n선택해주세오</string>
    <string name="sign_up_step_one_org">기업회원</string>
    <string name="sign_up_step_one_default">일반회원</string>
    <string name="sign_up_step_one_next">다음</string>

    <string name="sign_up_step_two_info">사용할 아이디와 비밀번호를\n입력해주세요</string>
    <string name="sign_up_step_two_id">아이디</string>
    <string name="sign_up_step_two_pw">비밀번호</string>
    <string name="sign_up_step_two_id_hint">아이디 입력</string>
    <string name="sign_up_step_two_pw_hint_one">비밀번호 입력</string>
    <string name="sign_up_step_two_pw_hint_two">비밀번호 확인</string>
    <string name="sign_up_check_id">중복확인</string>
    <string name="sign_up_step_two_id_rule">영문, 숫자를 합하여 6~20자</string>
    <string name="sign_up_step_two_pw_rule">영문, 숫자를 합하여 6~20자</string>
    <string name="sign_up_step_two_id_error">아이디가 중복되었습니다.</string>
    <string name="sign_up_step_two_pw_correct">비밀번호가 일치합니다.</string>
    <string name="sign_up_step_two_pw_error">비밀번호가 일치하지 않습니다.</string>

    <string name="sign_up_default_step_one_info">기본 정보를\n입력해주세요</string>
    <string name="sign_up_default_step_one_name">이름</string>
    <string name="sign_up_default_step_one_name_hint">이름 입력</string>
    <string name="sign_up_default_step_one_email">이메일</string>
    <string name="sign_up_default_step_one_email_hint">이메일 입력</string>
    <string name="sign_up_default_step_one_belong">학교(직장명)</string>
    <string name="sign_up_default_step_one_belong_hint">학교(직작명) 입력</string>
    <string name="sign_up_default_step_one_link">오픈카카오톡링크</string>
    <string name="sign_up_default_step_one_link_hint">오픈카카오톡링크 입력</string>
    <string name="sign_up_default_step_one_academic_status">학적상태</string>
    <string name="sign_up_default_step_one_academic_student">학생</string>
    <string name="sign_up_default_step_one_academic_worker">현업</string>
    <string name="sign_up_default_step_one_academic_etc">기타</string>
    <string name="sign_up_default_step_one_academic_sex">성별</string>
    <string name="sign_up_default_step_one_academic_sex_woman">여성</string>
    <string name="sign_up_default_step_one_academic_sex_man">남성</string>
    <string name="sign_up_default_step_one_academic_sex_ect">기타</string>
    <string name="sign_up_default_step_one_academic_next">다음</string>

    <string name="sign_up_default_step_two_info">포지션과 관심분야를\n선택해주세요</string>
    <string name="sign_up_default_step_two_position">포지션</string>
    <string name="sign_up_default_step_two_plan">PLAN</string>
    <string name="sign_up_default_step_twp_design">DESIGN</string>
    <string name="sign_up_default_step_two_develop">DEVELOP</string>
    <string name="sign_up_default_step_two_interest">관심분야</string>
    <string name="sign_up_default_step_two_web">웹</string>
    <string name="sign_up_default_step_two_application">애플리케이션</string>
    <string name="sign_up_default_step_two_commerce_shopping_mall">커머스,쇼핑몰</string>
    <string name="sign_up_default_step_two_default_software">일반 소프트웨어</string>
    <string name="sign_up_default_step_two_publishing">퍼블리싱</string>
    <string name="sign_up_default_step_two_word_press">워드프레스</string>
    <string name="sign_up_default_step_two_embedded">임베디드</string>
    <string name="sign_up_default_step_two_product">제품</string>
    <string name="sign_up_default_step_two_game">게임</string>
    <string name="sign_up_default_step_two_ect">기타</string>
    <string name="sign_up_default_step_two_done">완료</string>

    <string name="sign_up_org_step_one_info">인사담당자 정보를\n입력해주세요</string>
    <string name="sign_up_org_step_one_name">이름</string>
    <string name="sign_up_org_step_one_name_hint">이름 입력</string>
    <string name="sign_up_org_step_one_email">이메일</string>
    <string name="sign_up_org_step_one_email_hint">이메일 입력</string>
    <string name="sign_up_org_step_one_phone_num">전화번호</string>
    <string name="sign_up_org_step_one_phone_num_hint">전화번호 입력</string>
    <string name="sign_up_org_step_one_phone_num_txt">%s-%s</string>
    <string name="sign_up_org_step_one_next">다음</string>

    <string name="sign_up_org_step_two_info">기업 정보를\n입력해주세요</string>
    <string name="sign_up_org_step_two_type">기업형태</string>
    <string name="sign_up_org_step_two_type_hint">기업형태 입력</string>
    <string name="sign_up_org_step_two_business_num">사업자등록번호</string>
    <string name="sign_up_org_step_two_business_num_hint">사업자등록번호 입력</string>
    <string name="sign_up_org_step_two_business_num_txt">%s-%s</string>
    <string name="sign_up_org_step_two_org_name">회사명</string>
    <string name="sign_up_org_step_two_org_name_hint">회사명 입력</string>
    <string name="sign_up_org_step_two_owner_name">대표자명</string>
    <string name="sign_up_org_step_two_owner_name_hint">대표자명 입력</string>
    <string name="sign_up_org_step_two_address">회사주소</string>
    <string name="sign_up_org_step_two_address_hint">회사주소 입력</string>
    <string name="sign_up_org_step_two_done">완료</string>

    <!-- Home -->
    <string name="home">홈</string>
    <string name="home_belong_project">소속 프로젝트</string>
    <string name="home_recommend_project">추천 프로젝트</string>
    <string name="home_show_all">전체보기 ></string>

    <!-- Search -->
    <string name="search">검색</string>
    <string name="search_hint">키워드를 입력해주세요</string>

    <!-- Feed -->
    <string name="feed">피드</string>
    <string name="feed_project_kind">프로젝트 종류 ･ </string>
    <string name="feed_project_type">프로젝트 타입 ･ </string>
    <string name="feed_stack">기술스택</string>
    <string name="feed_writing">피드 작성</string>
    <string name="feed_write_project_select">프로젝트 선택</string>
    <string name="feed_write_project_select_hint">선택해주세요</string>
    <string name="feed_write_project_name">프로젝트 이름</string>
    <string name="feed_write_project_type">프로젝트 타입</string>
    <string name="feed_write_project_kind">프로젝트 종류</string>
    <string name="feed_write_link">참고 링크</string>
    <string name="feed_write_stack">기술 스택</string>
    <string name="feed_write_stack_hint">ex ) javascript</string>
    <string name="feed_write_detail_description">상세설명</string>


    <!-- Alarm -->
    <string name="alarm">알림</string>

    <!-- MyPage -->
    <string name="mypage">마이페이지</string>

    <!-- Open Project -->
    <string name="open_project">글쓰기</string>
    <string name="open_project_name">프로젝트 이름</string>
    <string name="open_project_type">프로젝트 타입</string>
    <string name="open_project_kind">프로젝트 종류</string>
    <string name="open_project_size">프로젝트 규모</string>
    <string name="open_project_ten_thousand_won">만원</string>
    <string name="open_project_recruit_time">모집 시기</string>
    <string name="open_project_going_period">진행 시기</string>
    <string name="open_project_going_state">진행 상태</string>
    <string name="open_project_not_idea">아이디어 구상 중</string>
    <string name="open_project_yes_idea">아이디어 있음</string>
    <string name="open_project_going_idea">진행 중</string>
    <string name="open_project_work_time">하루 평균 작업 시간</string>
    <string name="open_project_time">시간</string>
    <string name="open_project_recruit_num">모집 인원</string>
    <string name="open_project_plan">기획</string>
    <string name="open_project_design">디자인</string>
    <string name="open_project_develop">개발</string>
    <string name="open_project_person_num">명</string>
    <string name="open_project_stack">기술 스택</string>
    <string name="open_project_detail_description">상세설명</string>
    <string name="open_project_select">선택해주세요</string>
    <string name="open_project_on_off">온/오프라인 여부</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--마이페이지-->
    <string name="mypage_basic_info">기본정보</string>
    <string name="mypage_edit">수정</string>
    <string name="mypage_email">이메일</string>
    <string name="mypage_group">소속</string>
    <string name="mypage_academic">학적</string>
    <string name="mypage_gender">성별</string>
    <string name="mypage_attention_kind">관심분야</string>
    <string name="mypage_link">링크</string>
    <string name="mypage_github">깃허브</string>
    <string name="mypage_notion">노션</string>
    <string name="mypage_blog">블로그</string>
    <string name="mypage_open_kakao">오픈카카오톡</string>
    <string name="mypage_join">참여</string>
    <string name="mypage_upload">업로드</string>
    <string name="mypage_approve">승인대기</string>
    <string name="mypage_zzim">찜</string>

    <!--마이페이지 설정-->
    <string name="mypage_change_password">비밀번호 재설정</string>
    <string name="mypage_alarm_setting">알림 설정</string>
    <string name="mypage_app_info">앱 정보</string>
    <string name="mypage_app_logout">로그아웃</string>
    <string name="mypage_app_quit">탈퇴</string>
    <string name="mypage_setting">내 설정</string>
    <string name="mypage_ing">참여중</string>
    <string name="mypage_finish">참여완료</string>
</resources>