<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:id="@+id/tv_signup_two_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/pretendard_regular"
            android:text="@string/sign_up_step_two_info"
            android:textColor="@color/color_191919"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_id_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_signup_two_info">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretandard_bold"
                android:text="@string/sign_up_step_two_id"
                android:textColor="@color/color_191919"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_id_rule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/sign_up_step_two_id_rule"
                android:textColor="@color/color_C5C5C5"
                android:textSize="12sp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/fl_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_id_txt">

            <EditText
                android:id="@+id/etv_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_stroke_e6e6e6_radius_10"
                android:hint="@string/sign_up_step_two_id_hint"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="18dp"
                android:paddingVertical="16dp"
                android:textColor="@color/color_000000"
                android:textColorHint="@color/color_828282"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/btn_check_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/selector_signup_id_check_btn"
                android:enabled="false"
                android:fontFamily="@font/pretendard_regular"
                android:gravity="center"
                android:paddingHorizontal="12dp"
                android:text="@string/sign_up_check_id"
                android:textColor="@color/color_FFFFFF"
                android:textSize="12sp" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_id_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/pretendard_regular"
            android:text="@string/sign_up_step_two_id_error"
            android:textColor="@color/color_FF0000"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl_id" />


        <LinearLayout
            android:id="@+id/ll_pw_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_id_error">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretandard_bold"
                android:text="@string/sign_up_step_two_pw"
                android:textColor="@color/color_191919"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_pw_rule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/sign_up_step_two_pw_rule"
                android:textColor="@color/color_C5C5C5"
                android:textSize="12sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/etv_pw_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:background="@drawable/rectangle_stroke_e6e6e6_radius_10"
            android:hint="@string/sign_up_step_two_pw_hint_one"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingHorizontal="18dp"
            android:paddingVertical="16dp"
            android:textColor="@color/color_000000"
            android:textColorHint="@color/color_828282"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_pw_txt" />

        <EditText
            android:id="@+id/etv_pw_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rectangle_stroke_e6e6e6_radius_10"
            android:hint="@string/sign_up_step_two_pw_hint_two"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingHorizontal="18dp"
            android:paddingVertical="16dp"
            android:textColor="@color/color_000000"
            android:textColorHint="@color/color_828282"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etv_pw_one" />

        <TextView
            android:id="@+id/tv_pw_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/pretendard_regular"
            android:text="@string/sign_up_step_two_pw_error"
            android:textColor="@color/color_FF0000"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etv_pw_two" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:background="@drawable/selector_signin_btn"
            android:enabled="false"
            android:fontFamily="@font/pretandard_bold"
            android:paddingVertical="18dp"
            android:text="@string/sign_up_step_one_next"
            android:textColor="@color/selector_singin_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>